@@ -1,3 +1,6 @@
+R1.1.0      08-07-2020    Kukhee Kim (khkim)
+                        - add slow time PVs and chage PVs, adding linear conversion
+
 R1.0.0      08-06-2020    Kukkhee Kim (khkim)
                         - apply new register map, new data conversion
                         - build pcavLib R1.0.0
